[package]
name = "topdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]



[dependencies]
byteorder = "1.4"
env_logger = "0.9"
getrandom = "0.2"
glam = "0.21.3"
line_drawing = "1.0"
log = "0.4"
pixels = {path="../pixels-main"}
randomize = "3.0"
winit = "0.27"
winit_input_helper = "0.13"
